# brachistochrone

./: .gitattributes  .gitignore  README.md  requirements.txt  setup.cfg  setup.py
.github/workflows/: app.yaml  test.yaml
src/: __init__.py  __main__.py
src/rolypoly/: __init__.py  __main__.py  physics.py
src/tests/: __init__.py  test_physics.py
tests/: __init__.py  __main__.py  test_physics.py
