[metadata]
name = rolypoly
version = 0.0.0
author = Siddhartha Banerjee
author_email = info@emotive.academy
description = A Python library for working with 2D mechanics of rigid bodies
long_description = file: README.md
long_description_content_type = text/markdown
License = GNU GPLv3
url = https://www.emotive.academy 
classifiers = 
    Development Status :: Alpha
    Intended Audience :: Developers
    License :: GNU GPLv3
    Programming Language :: Python :: 3.12
package_dir = 
    = src/rolypoly
packages = find:

[options]
python_requires = >=3.12
install_requires = 
    numpy ~= 1.26.2

[flake8]
max-line-length = 88
extend-ignore = E203, W503